# lele-chess

./: .gitignore  CMakeLists.txt  Makefile  README.md  alpha_beta.sh  build.sh  clean.sh  engine  generate_uci_pgn.sh  perft.sh  pesto_notes.txt  profile.prof  stockfish_perft.sh  test.sh  test_engine
output/: a2a4.txt  a2a4_a7a6.txt  a2a4_a7a6_a4a5.txt  a2a4_a7a6_a4a5_b7b5.txt  a2a4_a7a6_a4a5_b7b5_a5b6.txt  a2a4_a7a6_a4a5_b7b5_a5b6_expected.txt  a2a4_a7a6_a4a5_b7b5_expected.txt  a2a4_a7a6_a4a5_expected.txt  a2a4_a7a6_expected.txt  a2a4_expected.txt  b2b4_b8c6_g2g4_expected.txt  castle_fen_expected.txt  d2d4.txt  d2d4_e7e6.txt  d2d4_e7e6_d4d5.txt  d2d4_e7e6_d4d5_e8e7.txt  d2d4_e7e6_d4d5_expected.txt  d2d4_e7e6_expected.txt  d2d4_expected.txt  e2e4.txt  e2e4_d7d5.txt  e2e4_d7d5_expected.txt  e2e4_e4e5_g1f3_b1c6_f1c4_f8c5.txt  e2e4_e4e5_g1f3_b1c6_f1c4_f8c5_expected.txt  e2e4_e7e5.txt  e2e4_e7e5_expected.txt  e2e4_e7e5_f1e2.txt  e2e4_e7e5_f1e2_d8g5_g1f3.txt  e2e4_e7e5_f1e2_d8g5_g1f3_expected.txt  e2e4_e7e5_f1e2_d8g5_g1f3_g5d2_expected.txt  e2e4_e7e5_f1e2_expected.txt  e2e4_expected.txt  ep_fen_1_expected.txt  ep_fen_expected.txt  perft_5.txt  perft_6.txt  perft_6_expected.txt
perft_output/: actual_depth_2.txt  actual_depth_3.txt  actual_depth_4.txt  actual_depth_5.txt  expected_depth_2.txt  expected_depth_3.txt  expected_depth_4.txt  expected_depth_5.txt  summary_depth_2.txt  summary_depth_3.txt  summary_depth_4.txt  summary_depth_5.txt
pgn/: ep.pgn  quiet_moves.pgn  system-loss-1-draw.txt  system-test-backrank-bug.txt  system_test-1.txt
pgn/system_tests/: now.uci  system-test-1-draw-now.pgn  system-test-1-draw-now.uci  system-test-1-draw.pgn  system-test-1-draw.uci  system-test-1-loss.pgn  system-test-2-loss_interactive.pgn
pgn/tests/: avoid_draw.pgn  avoid_draw_1.uci  take_draw.pgn  take_draw.uci  test_1.pgn  test_1.uci  test_2.pgn  test_2.uci  transposition_captures.pgn  transposition_captures.uci
positions/: a2a3.txt  a2a3_a7a6.txt  a2a4.txt  a2a4_a7a6.txt  a2a4_a7a6_a4a5.txt  a2a4_a7a6_a4a5_b7b5.txt  a2a4_a7a6_a4a5_b7b5_a5b6.txt  alpha_beta_simple.txt  alpha_beta_test_1.txt  alpha_beta_test_2.txt  alpha_beta_test_3.txt  alpha_beta_test_3_white.txt  alpha_beta_test_4.txt  b2b4_b8c6_g2g4.txt  bishop_move_set_test.txt  bk_1.txt  castled.txt  d2d4_e7e6.txt  d2d4_e7e6_d4d5.txt  d2d4_e7e6_d4d5_e8e7.txt  d2d4_e7e6_d4d5_e8e7_d5d6.txt  e2e4_e4e5_g1f3_b1c6_f1c4_f8c5.txt  e2e4_e7e5_f1e2.txt  e2e4_e7e5_f1e2_d8g5.txt  e2e4_e7e5_f1e2_d8g5_expected.txt  e2e4_e7e5_f1e2_d8g5_g1f3.txt  e2e4_e7e5_f1e2_d8g5_g1f3_g5d2.txt  e2e4_f7f5.txt  e2e4_g7g5.txt  ep_fen_1.txt  ep_fen_2.txt  now.txt  promotion.txt  queen_trade.txt  reverse_scotch.txt  scotch.txt  test_position_real.txt  transposition_test_two_pawns.txt
positions/bratko-kopec/: bk_2.txt  bk_2_1.txt  bk_3.txt  bk_4.txt  bk_5.txt
positions/bugs/: backrank_miss.txt  backrank_miss_c6c5.txt  backrank_miss_c6c5_d1c1.txt  backrank_miss_c6c5_d1c1_d2c1q.txt  backrank_miss_e5c4.txt  backrank_miss_e5c4_d1c1.txt  backrank_miss_e5f3.txt  backrank_miss_e5f3_g1h1.txt  backrank_miss_e5f3_g1h1_c6c5.txt
positions/openings/: kings_indian_fianchetto.txt  sicilian_staunton.txt
src/: bidirectional_map.hpp  bitboard.cpp  bitboard.hpp  board.cpp  board.hpp  board_info.hpp  board_squares.cpp  board_squares.hpp  const.hpp  direction.hpp  direction_map.hpp  evaluation.cpp  evaluation.hpp  hash_generator.cpp  hash_generator.hpp  magics.cpp  magics.hpp  main.cpp  move.cpp  move.hpp  move_gen.cpp  move_gen.hpp  move_set.cpp  move_set.hpp  pesto.cpp  pesto.hpp  search.cpp  search.hpp  transposition_table.cpp  transposition_table.hpp  utils.hpp  worker.cpp  worker.hpp
test/: test.cpp
utils/: perft_diff.py  pgn-extract
(+5 files in other folders)
